feat: criação da chamada para api de eventos

--- a/Frontend/ProEventos-App/src/app/eventos/eventos.component.html
+++ b/Frontend/ProEventos-App/src/app/eventos/eventos.component.html
@@ -1,11 +1,7 @@
- <!-- <h1>Eventos do components</h1>
-
- <p><b>Tema:</b> {{eventos[0].Tema}}</p>
- <p><b>Local:</b> {{eventos[0].Local}}</p> -->
+ <h1>Eventos</h1>
 
  <div *ngFor="let event of eventos">
-  <p><b>Tema:</b> {{event.Tema}}</p>
-  <p><b>Local:</b>{{event.Local}}</p>
-  <hr>
+   <h1>{{event.tema}}</h1>
+   <p>{{event.local}}</p>
 
  </div>
