fix: populão de dados api

--- a/Frontend/ProEventos-App/src/app/eventos/eventos.component.html
+++ b/Frontend/ProEventos-App/src/app/eventos/eventos.component.html
@@ -1,7 +1,10 @@
- <h1>Eventos</h1>
 
- <div *ngFor="let event of eventos">
+<h1>Eventos</h1>
+<div *ngFor="let event of eventos">
    <h1>{{event.tema}}</h1>
    <p>{{event.local}}</p>
+   <p>{{event.imageURL}}</p>
+   <p>{{event.lote}}</p>
+   <p>{{event.qtdPessoas}}</p>
 
  </div>
