feat: criação de componente navbar e adicionado  efeito de toggle  na responsividade

--- a/Frontend/ProEventos-App/src/app/app.component.html
+++ b/Frontend/ProEventos-App/src/app/app.component.html
@@ -1,3 +1,8 @@
-<app-eventos></app-eventos>
-<app-palestrantes></app-palestrantes>
-<router-outlet></router-outlet>
+<app-navbar></app-navbar>
+<div class="container">
+
+  <app-eventos></app-eventos>
+  <h1>Palestrantes</h1>
+  <app-palestrantes></app-palestrantes>
+  <router-outlet></router-outlet>
+</div>
